--- a/djangovue/frontend/public/index.html
+++ b/djangovue/frontend/public/index.html
@@ -9,15 +9,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <link rel="stylesheet" href="backend/static/main.css">
+    <title>Blog</title>
   </head>
   <body>
-
+    <div id="sidebar">
+      <div class="toggle-btn" onclick="openMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+      </div>
+      <ul>
+          <li>Меню сайта</li>
+          <li><a href="/">Главная</a></li>
+          <li><a href="/">Контакты</a></li>
+          <li><a href="/">Про нас</a></li>
+      </ul>
+  </div>
+  <div style="height: 100%;">
     {% block body %}
         {{ block.super }}
     {% endblock %}
+  </div>
 
-  </body>
+  <script>
+    function openMenu() {
+        document.getElementById("sidebar").classList.toggle("active");
+
+    }
+  </script>
+</body>
 </html>
 
 {% endblock %}
